--- a/material-music-app/package.json
+++ b/material-music-app/package.json
@@ -8,16 +8,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react-app-rewired": "^2.1.5",
+    "axios": "^0.19.0",
+    "http-proxy-middleware": "^0.20.0",
     "node-sass": "^4.13.0",
-    "sass-resources-loader": "^2.0.1",
+    "notistack": "^0.9.7",
     "react": "^16.12.0",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-promise": "^0.6.0",
+    "sass-resources-loader": "^2.0.1",
     "typeface-roboto": "^0.0.75"
   },
   "scripts": {
@@ -41,7 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
