--- a/material-music-app/package.json
+++ b/material-music-app/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-use": "^13.12.2",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-promise": "^0.6.0",
