--- a/material-music-server/pom.xml
+++ b/material-music-server/pom.xml
@@ -71,10 +71,17 @@
             <version>1.3.2</version>
         </dependency>
 
+        <!-- mybatis分页插件 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.13</version>
+        </dependency>
+
+        <!-- redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
     </dependencies>
 
