--- a/material-music-server/src/main/resources/application.yml
+++ b/material-music-server/src/main/resources/application.yml
@@ -3,6 +3,7 @@ server:
   servlet:
     context-path: /api
 
+# 数据库
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/cloudmusic?characterEncoding=utf-8&&serverTimezone=GMT%2B8
@@ -19,6 +20,17 @@ spring:
     multipart:
       max-file-size: 2MB
 
+# redis
+redis:
+  host: localhost
+  port: 6379
+  max-wait: 30000
+  max-active: 100
+  max-idle: 20
+  min-idle: 0
+  timeout: 3000
+
+# 日志
 logging:
   level:
     com:
@@ -29,6 +41,7 @@ logging:
 mybatis:
   config-location: classpath:mybatis.cfg.xml
 
+# 资源目录
 file:
   upload-dir: /material-music-resource
 
