--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: material-music CI
 
 on: [push]
 
@@ -9,7 +9,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [10.x, 12.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -17,8 +17,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Go to material-music-app directory
+      run: cd material-music-app
     - name: Install npm dependencies
-      run: cd material-music-app && npm install
+      run: npm install
     - name: Run build task
       run: npm run build --if-present
     - name: Deploy to Server
@@ -35,8 +37,10 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Go to material-music-server directory
+      run: cd ../material-music-server
     - name: Build with Maven
-      run: cd ../material-music-server && mvn -B package --file pom.xml
+      run: mvn -B package --file pom.xml
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@v2.0.7
       env:
