--- a/material-music-server/pom.xml
+++ b/material-music-server/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.joey</groupId>
-    <artifactId>cloud_music_server</artifactId>
+    <artifactId>material-music-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>cloud_music_server</name>
+    <name>material-music-server</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
