--- a/material-music-server/src/main/resources/application.yml
+++ b/material-music-server/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 # 数据库
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cloudmusic?characterEncoding=utf-8&&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/materialmusic?characterEncoding=utf-8&&serverTimezone=GMT%2B8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
