--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,7 +31,7 @@ jobs:
         PORT: ${{ secrets.FTP_PORT }}
         LOCAL_DIR: material-music-app/build
         REMOTE_DIR: /root/html/metarial-music/material-music-app
-        ARGS: --delete --verbose --continue
+        ARGS: --verbose --continue
 
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
@@ -49,4 +49,4 @@ jobs:
         PORT: ${{ secrets.FTP_PORT }}
         LOCAL_DIR: material-music-server/target
         REMOTE_DIR: /root/html/metarial-music/material-music-server
-        ARGS: --delete --verbose --continue
+        ARGS: --verbose --continue
