--- a/material-music-app/package.json
+++ b/material-music-app/package.json
@@ -4,22 +4,23 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.1",
-    "@material-ui/lab": "^4.0.0-alpha.40",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.40",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@umijs/hooks": "^1.8.0",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "notistack": "^0.9.7",
-    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "react-use": "^13.12.2",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
@@ -48,6 +49,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
